fix tests to be java 8 compilant